Update code Cúc Tịnh Y

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <section id="backGround">
       <div class="container-fluid relative">
         <header>
-          <img src="img/logo-Netflix.png" alt="Responsive image LOGO" class="img-fluid" />
+          <img src="img/THUTHAO.png" alt="Responsive image LOGO" class="img-fluid" />
           <button type="button" class="btn btn-danger">Login</button>
         </header>
       </div>
       <div class=" jumbotron jumbotron-fluid relative mt-5" data-aos="zoom-in-down" data-aos-duration="3000">
-        <h1>Happy Birthday Cúc Tịnh Y</h1>
-        <p class="lead">Hãy lướt xuống để đọc tin nhắn nhé rồi hãy nhấn nút nha</p>
+        <h1>Cúc Tịnh Y</h1>
+        <p class="lead">Hãy lướt xuống để đọc tin nhắn nhé rồi hãy nhấn nút nha cô nương</p>
         <div class="row no-gutters justify-content-center">
           <div class="col-12 col-lg-3 third my-4">
             <a href="landing.html" class="subscribe">
@@ -33,7 +33,7 @@
           </div>
         </div>
         <div class="col-12 first">
-          <p>18 - 06</p>
+          <p>Hình như sinh nhật của chỉ là 18 - 06</p>
         </div>
       </div>
     </section>
@@ -42,8 +42,8 @@
       <div class="container my-5">
         <div class="row">
           <div class="col-12 col-lg-6 text-lg-left" data-aos="zoom-in-down" data-aos-duration="3000">
-            <h2>Happy birthday</h2>
-            <p>Chúc mừng sinh nhật Cúc Tịnh Y – đóa hoa thanh khiết giữa bầu trời nghệ thuật. Tựa ánh trăng dịu dàng, tựa ánh dương rực rỡ, nàng mang đến vẻ đẹp tinh khôi và thanh âm trong trẻo chạm đến trái tim muôn người. Mong rằng trên hành trình sắp tới, mỗi bước đi của nàng đều trải đầy sắc hoa, mỗi giấc mơ đều nở rộ như ánh bình minh rạng rỡ. ✨🌸</p>
+            <h2>Nguồn gốc thật sự của danh xưng "Mỹ nữ 4000 năm"</h2>
+            <p>Bạn có biết danh hiệu "Mỹ nữ 4000 năm có một" gắn liền với Cúc Tịnh Y thực chất là một... cú "tam sao thất bản" không? Ban đầu, truyền thông Nhật Bản gọi cô là "Thần tượng 4000 năm mới gặp" để khen ngợi tài năng và sức hút khi cô còn hoạt động trong nhóm SNH48. Tuy nhiên, khi tin tức này bay về Trung Quốc, do lỗi dịch thuật mà nó biến thành "Mỹ nữ 4000 năm". Dù gây ra không ít tranh cãi và áp lực cho chính chủ, nhưng không thể phủ nhận cái tên này đã trở thành một thương hiệu độc quyền giúp cô nàng nổi đình nổi đám khắp châu Á.</p>
           </div>
           <div class="col-12 col-lg-6" data-aos="zoom-in-down" data-aos-duration="3000">
             <img style="max-width: 300px;" src="./img/index/Anh (1).jpg" alt="Responsive image television" class="img-fluid" />
@@ -58,9 +58,8 @@
           <div class="col-12 col-lg-6 ml-6 order-first order-lg-last text-lg-left" data-aos="flip-left"
           data-aos-easing="ease-out-cubic"
           data-aos-duration="2000">
-            <h2>Cúc tỷ</h2>
-            <p>Từ nơi xa xôi, Mật Quốc luôn dõi theo từng nụ cười, từng bước trưởng thành của chị. Với chúng em, chị không chỉ là một minh tinh rực rỡ mà còn là nguồn động lực dịu dàng, sưởi ấm trái tim. Mong chị luôn hạnh phúc, bình an và giữ mãi ánh sáng trong trẻo của riêng mình. Dù con đường phía trước có thế nào, Mật Quốc sẽ mãi ở đây, đồng hành và yêu thương chị bằng tất cả chân thành. 💖✨
-            </p>
+            <h2>Không phải "bình hoa di động", mà là "cân team" thực thụ</h2>
+            <p>Trước khi chuyển sang đóng phim, Cúc Tịnh Y từng là "bà hoàng" của nhóm nhạc đông dân SNH48. Cô nàng sở hữu thành tích cực khủng khi liên tiếp đứng đầu trong các cuộc tổng tuyển cử của nhóm với số phiếu bầu áp đảo. Không chỉ hát hay, nhảy đẹp, "Tiểu Cúc" còn biết chơi nhiều loại nhạc cụ như violin, piano và đàn tranh. Có thể nói, cô nàng là minh chứng sống cho việc idol "nhỏ mà có võ", đa tài đa nghệ chứ không chỉ dựa vào nhan sắc.</p>
           </div>
           <div class="col-12 col-lg-6" data-aos="flip-left"
           data-aos-easing="ease-out-cubic"
@@ -76,9 +75,8 @@
         <div class="row">
           <div class="col-12 col-lg-6 text-lg-left" data-aos="fade-up"
           data-aos-anchor-placement="bottom-bottom" data-aos-duration="3000">
-            <h2>Điều ước Mật Quốc gửi đến chị</h2>
-            <p>Ước mong mọi ngày trong đời chị đều sáng như nắng mai, rực rỡ như hoa nở, êm đềm như gió xuân. Ước mong những giấc mơ chị theo đuổi sẽ luôn hóa thành hiện thực, còn nụ cười của chị sẽ mãi là ánh sáng dịu dàng dẫn lối cho chúng em. Và trên con đường dài phía trước, chị sẽ luôn được yêu thương, chở che và tỏa sáng theo cách riêng của mình. ✨🌸💖
-            </p>
+            <h2>Bậc thầy tạo trend và "make-up artist" của chính mình</h2>
+            <p>Một điều thú vị là Cúc Tịnh Y thường xuyên tự trang điểm cho mình trong các bộ phim cũng như khi đi sự kiện. Phong cách trang điểm "Cúc Tịnh Y" với đôi mắt long lanh, làn da trắng sứ và khí chất "tiên tử" đã trở thành một hiện tượng viral trên mạng xã hội, được hàng triệu cô gái học theo. Dù đóng phim cổ trang hay hiện đại, cô luôn giữ vững một phong độ nhan sắc ổn định đến mức nhiều người đùa rằng cô nàng như... bước ra từ truyện tranh vì lúc nào cũng đẹp không tì vết, bất chấp mọi góc quay.</p>
           </div>
           <div class="col-12 col-lg-6" data-aos="fade-up"
           data-aos-anchor-placement="bottom-bottom" data-aos-duration="3000">
@@ -207,7 +205,7 @@
         </div>
       </div>
       <p class="footer-copyright pt-5 pb-2 font-weight-lighter text-muted">
-        <i class="fa-regular fa-copyright"></i> Dr.Gifter
+        <!-- <i class="fa-regular fa-copyright"></i> Dr.Gifter -->
       </p>
     </div>
   </footer>
