--- a/landing.html
+++ b/landing.html
@@ -19,7 +19,7 @@
                 <div class="netflix-row">
                     <div class="left d-flex align-items-center">
                         <a class="navbar-brand" href="index.html">
-                            <img src="./img/logo-Netflix.png" alt="">
+                            <img src="./img/THUTHAO.png" alt="">
                         </a>
                         <div class="netflix-nav">
                             <section>
