Cap nhat code moi nhat

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <title>Happy Birthday Ju Jing Yi</title>
+  <title>Ju Jing Yi</title>
   <link href="css/bootstrap.min.css" rel="stylesheet" />
   <link href="floating-labels.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet" />
